--- a/examples/rainbow/rel/vm.args.eex
+++ b/examples/rainbow/rel/vm.args.eex
@@ -1,26 +1,29 @@
 ## Add custom options here
 
-## Embedded Mode
-##  BEAM will lazy load modules unless this is set
--mode embedded
-
 ## Distributed Erlang Options
 ##  The cookie needs to be configured prior to vm boot for
 ##  for read only filesystem.
 
-# -name rainbow@0.0.0.0
--setcookie dlkhg7wqguzshoh5pyh2g572h7jlxdill4s5mndnrex2pbodqpxupubugbq6tlry
+-setcookie <%= @release.options[:cookie] %>
 
 ## Use Ctrl-C to interrupt the current shell rather than invoking the emulator's
 ## break handler and possibly exiting the VM.
 +Bc
+
+# Allow time warps so that the Erlang system time can more closely match the
+# OS system time.
++C multi_time_warp
+
+## Load code at system startup
+## See http://erlang.org/doc/system_principles/system_principles.html#code-loading-strategy
+-mode embedded
 
 ## Save the shell history between reboots
 ## See http://erlang.org/doc/man/kernel_app.html for additional options
 -kernel shell_history enabled
 
 ## Enable heartbeat monitoring of the Erlang runtime system
-#-heart -env HEART_BEAT_TIMEOUT 30
+-heart -env HEART_BEAT_TIMEOUT 30
 
 ## Start the Elixir shell
 
